Add block for Citrix employment and update a typo.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -13,12 +13,27 @@ Syracuse NY, 13210 & twobit.us \\
 
 % qualification summary
     \resheading {Qualification Summary}
-    Computer Engineer with 6 years experience working in a government research environment.
+    Computer Engineer with 7 years experience working in a government research environment and 1 year corporate.
 Strong technical, organizational and planning skills.
 Professional, trustworthy and all-around team player.
 Dedicated to technical excellence in software design, implementation and documentation with a specific focus on security.
     % relevant experience
     \resheading {Professional Experience}
+    \resemployer {Citrix Systems}{Syracuse,NY}
+    \resjob [
+      Developer on XenClient XT product.
+      XT is a variant of the XenClient client hypervisor with particular focus on strong separation and security.
+      Primary customers include U.S. and foreign government defense agencies.
+      Responsibilities on this project include:
+    ]{Senior Software Engineer}{2011}{present}
+    \begin {itemize}
+        \setlength {\itemsep}{1pt}
+        \setlength {\parskip}{0pt}
+        \setlength {\parsep}{0pt}
+      \item Development of the platform SELinux and XSM policy.
+      \item Collecting requirements from customers and evaluators / testers for the purpose of system improvements and knowledge transfer.
+      \item Supporting early pilot programs with architectural, debugging and prototyping services.
+    \end {itemize}
     \resemployer {Air Force Research Lab}{Rome,NY}
     \resjob [
       Performed a mix of work on research efforts relevant to military needs in the area of information systems security and contract management.
