Update open source section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -51,14 +51,14 @@ Dedicated to technical excellence in software design, implementation and documen
       \resemployer {Open Source}{}
       \resjob [
         Contributed code, testing and/or debugging to open source projects:
+        Blogger and Twitter user, actively participating in open source and security community.
       ] {Contributor} {2010} {present}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Currently performing data collection and working on design for DBus-based resolvconf replacement.
-      \item Currently working on Masters Project: integrating mandatory access control with Opus Palladium web browser from UIUC.
-      \item SELinux policy for Debian Squeeze release.
+      \item Dual purposed work on Masters Project and work on XenClient XT: integrating mandatory access control (SELinux) with XenClient management stack to separate mutually distructing QEMU processes (sVirt architecture).  All code and documentation is open source.
+      \item Some contributions to Debian Squeeze SELinux policy.
       \end {itemize}
     % education
     \resheading{Education}
