Added bullets on XSM, OE and git usage to "Relevant Technical Proficiencies" section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -102,8 +102,11 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
       \item SELinux policy development and system configuration.
+      \item XSM concepts and policy development.
       \item Design and implementation of secure systems and Cross Domain Solutions.
+      \item Familiarity with OpenEmbedded build system and Angstrom Distro.
       \item Programming in various languages (shell,C,C++,C\#), quickly learns new languages as needed.
+      \item Basic git usage.
       \item Pipeline processing \& system design for deployment on SELinux systems.
       \item Document preparation in \LaTeX.
     \end {itemize}
