Prepend http:// to personal website URL.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -8,7 +8,7 @@
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
 \textbf{\Large Philip B. Tricca} & 978.766.5515 \\
 916 Westcott St. & flihp@twobit.us \\
-Syracuse NY, 13210 & twobit.us \\
+Syracuse NY, 13210 & http://twobit.us \\
 \end{tabular*}
 
 % qualification summary
