Fix punctuation in "Open Source" section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -50,7 +50,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \end {itemize}
       \resemployer {Open Source}{}
       \resjob [
-        Contributed code, testing and/or debugging to open source projects:
+        Contributed code, testing and/or debugging to open source projects.
         Blogger and Twitter user, actively participating in open source and security community.
       ] {Contributor} {2010} {present}
       \begin {itemize}
