Add name to footer and break page at Education section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -1,6 +1,6 @@
 \documentclass[letterpaper,11pt]{article}
 \usepackage[pagesetup]{tucv}
-\fancyfoot[C]{\thepage}
+\fancyfoot[C]{Philip Tricca - \thepage}
 
 \begin{document}
 
@@ -60,6 +60,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item Dual purposed work on Masters Project and work on XenClient XT: integrating mandatory access control (SELinux) with XenClient management stack to separate mutually distructing QEMU processes (sVirt architecture).  All code and documentation is open source.
       \item Some contributions to Debian Squeeze SELinux policy.
       \end {itemize}
+      \pagebreak
     % education
     \resheading{Education}
     \begin{itemize}
