Add popular blog posts with links to "Publications" section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -1,5 +1,6 @@
 \documentclass[letterpaper,11pt]{article}
 \usepackage[pagesetup]{tucv}
+\usepackage[colorlinks=true,urlcolor=black]{hyperref}
 \fancyfoot[C]{Philip Tricca - \thepage}
 
 \begin{document}
@@ -95,7 +96,20 @@ Dedicated to technical excellence in software design, implementation and documen
     {\it A pipeline development toolkit in support of secure information flow goals}.
     Proceedings of the 5th Annual CSIIR Workshop : Cyber Security and Information Intelligence Challenges and Strategies.
     Oak Ridge, Tennessee.
-    2009.
+    2009.\\
+    Popular blog posts:
+    \begin {itemize}
+      \setlength {\itemsep}{1pt}
+      \setlength {\parskip}{0pt}
+      \setlength {\parsep}{0pt}
+    \item
+      An on-going series documenting my masters project implementing the sVirt architecture on XenClient:
+      \url{http://twobit.us/blog/tag/mastersproject/}
+    \item
+      A two part series describing the ``why'' and ``how'' of configuring a network driver domain on Xen:
+      \url{http://twobit.us/blog/2010/07/xen-network-driver-domain-wh/}
+      \url{http://twobit.us/blog/2010/07/xen-network-driver-domain-how/}
+    \end {itemize}
     % technical proficiencies
     \resheading {Relevant Technical Proficiencies}
     \begin {itemize}
