--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -7,9 +7,12 @@
 
 % Page heading and name/contact info table
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
-\textbf{\Large Philip B. Tricca} & 978.766.5515 \\
-916 Westcott St. & flihp@twobit.us \\
-Syracuse NY, 13210 & http://twobit.us \\
+\textbf{\Large Philip B. Tricca}
+& 978.766.5515 \\
+13 Highland Ave. \#1
+& flihp@twobit.us \\
+Somerville MA, 02143
+& http://twobit.us \\
 \end{tabular*}
 
 % qualification summary
