Bulk up the opening line.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -17,7 +17,7 @@ Somerville MA, 02143
 
 % qualification summary
     \resheading {Qualification Summary}
-    Computer Engineer with 7 years experience working in a government research environment and 1 year corporate.
+    Computer Engineer with 7 years experience working in a government research environment and 2 years architecting and building a security focused Linux-based virtualization product.
 Strong technical, organizational and planning skills.
 Professional, trustworthy and all-around team player.
 Dedicated to technical excellence in software design, implementation and documentation with a specific focus on security.
