Update Citrix location from Syracuse -> Bedford.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -23,7 +23,7 @@ Professional, trustworthy and all-around team player.
 Dedicated to technical excellence in software design, implementation and documentation with a specific focus on security.
     % relevant experience
     \resheading {Professional Experience}
-    \resemployer {Citrix Systems}{Syracuse,NY}
+    \resemployer {Citrix Systems}{Bedford,MA}
     \resjob [
       Developer on XenClient XT product.
       XT is a variant of the XenClient client hypervisor with particular focus on strong separation and security.
