re-word and re-organize Citrix professional experience section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -34,9 +34,10 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Development of the platform SELinux and XSM policy.
-      \item Collecting requirements from customers and evaluators / testers for the purpose of system improvements and knowledge transfer.
-      \item Supporting early pilot programs with architectural, debugging and prototyping services.
+      \item Design and implementation of platform measured launch using the TPM and Intel\textsuperscript{\textregistered} TXT.
+      \item Defining and documenting threat models and the software architectures that defend against them.
+      \item Development of platform mandatory access control policy (SELinux / XSM).
+      \item Collecting requirements from customers and evaluators / testers for the purpose of knowledge transfer and certification.
     \end {itemize}
     \resemployer {Air Force Research Lab}{Rome,NY}
     \resjob [
