Reword description of XT description.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -25,10 +25,9 @@ Dedicated to technical excellence in software design, implementation and documen
     \resheading {Professional Experience}
     \resemployer {Citrix Systems}{Bedford,MA}
     \resjob [
-      Developer on XenClient XT product.
-      XT is a variant of the XenClient client hypervisor with particular focus on strong separation and security.
-      Primary customers include U.S. and foreign government defense agencies.
-      Responsibilities on this project include:
+      Developer on XenClient XT product: a variant of the XenClient client hypervisor focused on strong separation and security.
+      Primary customers include government defense agencies.
+      Contributions to this project include:
     ]{Senior Software Engineer}{2011}{present}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
