Specifically mention 'Lead Engineer' role in SecureView and some language clean-up in AFRL section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -46,10 +46,10 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Worked closely with Citrix engineers to develop and integrate SELinux support in XenClient product.
+      \item Lead Engineer on SecureView project, briefed ODNI decision makers on security architecture and technical design.
+      \item Worked on design improvements to ``Guard'' systems through the application of mandatory access control mechanisms and general information flow principles.
+      \item Developed and maintained relationships with computer security community through academic and industry / open source conferences.
       \item Familiarity with Common Criteria Protection Profiles, NIST 800-53, CNSSI 1253.
-      \item Worked on design improvements to ``Guard'' systems through the application of Mandatory Access Control (MAC) and general information flow principles.
-      \item Developed and maintained relationships with computer security community through academic conferences and Linux Security Summit (SELinux).
       \item Contract management and technical guidance of cooperative research agreements (IARPA funded) with academic institutions including Cornell and PSU totaling over \$2M.
       \end {itemize}
       \resemployer {Open Source}{}
