Add division / group to resjob blocks.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -28,7 +28,7 @@ Dedicated to technical excellence in software design, implementation and documen
       Developer on XenClient XT product: a variant of the XenClient client hypervisor focused on strong separation and security.
       Primary customers include government defense agencies.
       Contributions to this project include:
-    ]{Senior Software Engineer}{2011}{present}
+    ]{Senior Software Engineer, Client Virtualization Group}{2011}{present}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -41,7 +41,7 @@ Dedicated to technical excellence in software design, implementation and documen
     \resemployer {Air Force Research Lab}{Rome,NY}
     \resjob [
       Performed a mix of work on research efforts relevant to military needs in the area of information systems security and contract management.
-    ]{Computer Engineer}{2004}{2011}
+    ]{Computer Engineer, Information Directorate}{2004}{2011}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
