Some language clean-up in Open Source section. Removed bit about minor contributions to Debian SELinux.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -54,15 +54,14 @@ Dedicated to technical excellence in software design, implementation and documen
       \end {itemize}
       \resemployer {Open Source}{}
       \resjob [
-        Contributed code, testing and/or debugging to open source projects.
-        Blogger and Twitter user, actively participating in open source and security community.
+        Contributing code, testing and/or debugging to open source projects.
+        Blogger and active participant in open source and security community.
       ] {Contributor} {2010} {present}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Dual purposed work on Masters Project and work on XenClient XT: integrating mandatory access control (SELinux) with XenClient management stack to separate mutually distructing QEMU processes (sVirt architecture).  All code and documentation is open source.
-      \item Some contributions to Debian Squeeze SELinux policy.
+      \item Dual purpose work on Masters Project and XenClient XT: integratingSELinux with XenClient management stack to separate mutually distrusted QEMU processes (sVirt architecture).
       \end {itemize}
       \pagebreak
     % education
