Add bullets about recent OE work.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -61,6 +61,8 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
+      \item Creator of the meta-measured Open Embedded layer to automate measured launch in embedded-style build environment. Currently listed in the official OE layer index.
+      \item Contributor to meta-selinux Open Embedded layer.
       \item Dual purpose work on Masters Project and XenClient XT: integratingSELinux with XenClient management stack to separate mutually distrusted QEMU processes (sVirt architecture).
       \end {itemize}
       \pagebreak
