Fix date format for degrees and add date received for my M.S.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -75,12 +75,12 @@ Dedicated to technical excellence in software design, implementation and documen
         Software Security and Systems Assurance\\
         Advisor: Dr. Wenliang (Kevin) Du\\
         Cumulative GPA: 3.85
-      ]{M.S.}{Computer Engineering}{2006 to present}
+      ]{M.S.}{Computer Engineering}{2006-2012}
       \resdegree[
         Focus of study: Software Engineering.\\
         Particular interest in system level programming (i386 Assembly, C).\\
         Cumulative GPA: 3.78
-      ]{B.S.}{Computer Engineering}{2000 to 2004}
+      ]{B.S.}{Computer Engineering}{2000-2004}
     \end{itemize}
 
     % awards
