Rename section for representative writing samples and add meta-measured blog post.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -101,11 +101,14 @@ Dedicated to technical excellence in software design, implementation and documen
     Proceedings of the 5th Annual CSIIR Workshop : Cyber Security and Information Intelligence Challenges and Strategies.
     Oak Ridge, Tennessee.
     2009.\\
-    Popular blog posts:
+    Representative writing samples:
     \begin {itemize}
       \setlength {\itemsep}{1pt}
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
+    \item
+      Measured launch on OE-Core:
+      \url {http://twobit.us/blog/2013/01/meta-measured/}
     \item
       An on-going series documenting my masters project implementing the sVirt architecture on XenClient:
       \url{http://twobit.us/blog/tag/mastersproject/}
