--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -126,7 +126,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item SELinux policy development and system configuration.
       \item XSM concepts and policy development.
       \item Design and implementation of secure systems and Cross Domain Solutions.
-      \item Familiarity with OpenEmbedded build system and Angstrom Distro.
+      \item Proficiency with Open Embedded build system and various meta layers.
       \item Programming in various languages (shell,C,C++,C\#), quickly learns new languages as needed.
       \item Basic git usage.
       \item Pipeline processing \& system design for deployment on SELinux systems.
