Fix up languages section of Technical Proficiencies section.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -127,7 +127,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item XSM concepts and policy development.
       \item Design and implementation of secure systems and Cross Domain Solutions.
       \item Proficiency with Open Embedded build system and various meta layers.
-      \item Programming in various languages (shell,C,C++,C\#), quickly learns new languages as needed.
+      \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
       \item Basic git usage.
       \item Pipeline processing \& system design for deployment on SELinux systems.
       \item Document preparation in \LaTeX.
