Combine SELinux and XSM bullets from 'technical proficiencies' section into a Flask bullet.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -123,8 +123,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\itemsep}{1pt}
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
-      \item SELinux policy development and system configuration.
-      \item XSM concepts and policy development.
+      \item Flask policy development development and system configuration (SELinux / XSM).
       \item Design and implementation of secure systems and Cross Domain Solutions.
       \item Proficiency with Open Embedded build system and various meta layers.
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
