Colapse information flow and MAC bullet in technocal proficiencies into CDS bullet.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -124,11 +124,10 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
       \item Flask policy development development and system configuration (SELinux / XSM).
-      \item Design and implementation of secure systems and Cross Domain Solutions.
+      \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
       \item Proficiency with Open Embedded build system and various meta layers.
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
       \item Basic git usage.
-      \item Pipeline processing \& system design for deployment on SELinux systems.
       \item Document preparation in \LaTeX.
     \end {itemize}
 \end {document}
