--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -125,7 +125,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parsep}{0pt}
       \item Flask policy development development and system configuration (SELinux / XSM).
       \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
-      \item Proficiency with Open Embedded build system and various meta layers.
+      \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
       \item Basic git usage.
       \item Document preparation in \LaTeX.
