Bulk up git line in technical proficiencies.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -127,7 +127,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
       \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
-      \item Basic git usage.
+      \item Basic git usage and work flows.
       \item Document preparation in \LaTeX.
     \end {itemize}
 \end {document}
