--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -126,6 +126,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item Flask policy development development and system configuration (SELinux / XSM).
       \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
       \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
+      \item Professional / technical writing and documentation suitable for submission as project deliverables.
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
       \item Basic git usage and work flows.
       \item Document preparation in \LaTeX.
