Add new title with Citrix and compress some stuff.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -16,18 +16,29 @@ Somerville MA, 02143
 \end{tabular*}
 
     \resheading {Qualification Summary}
-    Computer Engineer with 7 years experience working in a government research environment and 2 years architecting and building a security focused Linux-based virtualization product.
+    Computer Engineer with 7 years experience working in a government research environment and 2 years architecting and building a security focused, Linux-based virtualization product.
 Strong technical, organizational and planning skills.
-Professional, trustworthy and all-around team player.
+Professional, trustworthy and a natural communicator.
 Dedicated to technical excellence in software design, implementation and documentation with a specific focus on security.
 
     \resheading {Professional Experience}
     \resemployer {Citrix Systems}{Bedford,MA}
     \resjob [
-      Developer on XenClient XT product: a variant of the XenClient client hypervisor focused on strong separation and security.
+      The role of architect is largely a super-set of the responsibilities of a software engineer.
+      Additional responsibilities include:
+    ]{Architect, Client Virtualization Group}{2013}{present}
+    \begin {itemize}
+        \setlength {\itemsep}{1pt}
+        \setlength {\parskip}{0pt}
+        \setlength {\parsep}{0pt}
+      \item Cross-product design and requirements gathering to reduce duplication, standardize implementations and reduce likelihood of flaws.
+      \item Implementation and customer-facing requirements and design review of encryption implementation.
+    \end {itemize}
+    \resjob [
+      Developer on XenClient XT product: a client hypervisor focused on strong separation and security properties.
       Primary customers include government defense agencies.
       Contributions to this project include:
-    ]{Senior Software Engineer, Client Virtualization Group}{2011}{present}
+    ]{Senior Software Engineer, Client Virtualization Group}{2011}{2013}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -45,11 +56,10 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Lead Engineer on SecureView project, briefed ODNI decision makers on security architecture and technical design.
-      \item Worked on design improvements to ``Guard'' systems through the application of mandatory access control mechanisms and general information flow principles.
-      \item Developed and maintained relationships with computer security community through academic and industry / open source conferences.
-      \item Familiarity with Common Criteria Protection Profiles, NIST 800-53, CNSSI 1253.
-      \item Contract management and technical guidance of cooperative research agreements (IARPA funded) with academic institutions including Cornell and PSU totaling over \$2M.
+      \item Lead Engineer on SecureView project. Responsible for security architecture, technical design and customer reviews.
+      \item Design improvements to ``Guard'' systems through the application of mandatory access control mechanisms and information flow principles.
+      \item Maintain relationships with security community through academic and industry conferences.
+      \item Contract management and technical guidance of cooperative research agreements with academic institutions including Cornell and PSU totaling over \$2M.
       \end {itemize}
       \resemployer {Open Source}{}
       \resjob [
@@ -61,9 +71,9 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
       \item
-        Creator of the meta-measured Open Embedded layer to automate measured launch in embedded-style build environment.
+        Creator and maintainer of the meta-measured OpenEmbedded layer to automate measured launch in embedded-style build environment.
         Currently listed in the official OE layer index.
-      \item Contributor to meta-selinux Open Embedded layer.
+      \item Contributor to the meta-selinux and meta-virtualization OpenEmbedded layers.
       \item
         Dual purpose work on Masters Project and XenClient XT:
         Integration of SELinux with XenClient management stack to separate mutually distrusted QEMU processes (sVirt architecture).
@@ -92,7 +102,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
     \item Outstanding Engineering Professionalism Award.
-      Mohawk Vally Engineers Executive Council.
+      Mohawk Valley Engineers Executive Council.
       2010-02-18
     \item Special recognition of service from the Commander for service rendered while leading Commander Directed Investigation, 2009.
     \end {itemize}
