Add months to employment dates.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -26,7 +26,7 @@ Dedicated to technical excellence in software design, implementation and documen
     \resjob [
       The role of architect is largely a super-set of the responsibilities of a software engineer.
       Additional responsibilities include:
-    ]{Architect, Client Virtualization Group}{2013}{present}
+    ]{Architect, Client Virtualization Group}{10/2013}{present}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -38,7 +38,7 @@ Dedicated to technical excellence in software design, implementation and documen
       Developer on XenClient XT product: a client hypervisor focused on strong separation and security properties.
       Primary customers include government defense agencies.
       Contributions to this project include:
-    ]{Senior Software Engineer, Client Virtualization Group}{2011}{2013}
+    ]{Senior Software Engineer, Client Virtualization Group}{08/2011}{10/2013}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -51,7 +51,7 @@ Dedicated to technical excellence in software design, implementation and documen
     \resemployer {Air Force Research Lab}{Rome,NY}
     \resjob [
       Performed a mix of work on research efforts relevant to military needs in the area of information systems security and contract management.
-    ]{Computer Engineer, Information Directorate}{2004}{2011}
+    ]{Computer Engineer, Information Directorate}{07/2004}{08/2011}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -65,7 +65,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \resjob [
         Contributing code, testing and/or debugging to open source projects.
         Blogger and active participant in open source and security community.
-      ] {Contributor} {2010} {present}
+      ] {Contributor} {01/2010} {present}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
