Add public speaking @ XenSummit to 'publication' section.
Separate entries a bit better. Newlines are too much, indentation
would be better.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -107,11 +107,16 @@ Dedicated to technical excellence in software design, implementation and documen
     \item Special recognition of service from the Commander for service rendered while leading Commander Directed Investigation, 2009.
     \end {itemize}
 
-    \resheading {Publications}
+    \resheading {Public Speaking \& Publications}
+    {\it In-Guest Mechanisms to Strengthen Guest Separation}.
+    Xen Summit colocated with LinuxCon.
+    Edinburgh, Scotland,
+    2013.
+    URL: \url {https://www.youtube.com/watch?v=6Q8mlTBn-ZI}\newline\newline
     {\it A pipeline development toolkit in support of secure information flow goals}.
     Proceedings of the 5th Annual CSIIR Workshop : Cyber Security and Information Intelligence Challenges and Strategies.
     Oak Ridge, Tennessee.
-    2009.\\
+    2009.\newline\newline
     Representative writing samples:
     \begin {itemize}
       \setlength {\itemsep}{1pt}
