Minor language changes.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -24,7 +24,7 @@ Dedicated to technical excellence in software design, implementation and documen
     \resheading {Professional Experience}
     \resemployer {Citrix Systems}{Bedford,MA}
     \resjob [
-      The role of architect is largely a super-set of the responsibilities of a software engineer.
+      The role of architect is a super-set of the responsibilities of a software engineer.
       Additional responsibilities include:
     ]{Architect, Client Virtualization Group}{10/2013}{present}
     \begin {itemize}
@@ -32,7 +32,7 @@ Dedicated to technical excellence in software design, implementation and documen
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
       \item Cross-product design and requirements gathering to reduce duplication, standardize implementations and reduce likelihood of flaws.
-      \item Implementation and customer-facing requirements and design review of encryption implementation.
+      \item Architect and implement virtual disk encryption, lead customer requirements and design review.
     \end {itemize}
     \resjob [
       Developer on XenClient XT product: a client hypervisor focused on strong separation and security properties.
