Redefine 'resjob' command to prevent breaking dates across lines.
Not sure which I like better but I figured out how to do it so I'm
leaving it for now.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -5,6 +5,16 @@
 
 \begin{document}
 
+% renew resjob command to get rid of weird line break in date range
+\RenewDocumentCommand\resjob{ommm}{
+    \resentry[10pt]{
+    \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex} \textbf{#2}
+    \IfNoValueTF{#1}
+    {}
+    {\newline #1}
+    }{\mbox {#3 - #4}}
+}
+
 % Page heading and name/contact info table
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
 \textbf{\Large Philip B. Tricca}
