Add proficiencies for recent virtual disk crypto stuff.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -150,6 +150,8 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
       \item Flask policy development development and system configuration (SELinux / XSM).
+      \item Familiarity with requirements from IAD SFDE protection profile.
+      \item Appropriate usage of OpenSSL APIs (EVP/RAND) for use in virtual full disk encryption and FIPS mode configuration.
       \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
       \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
       \item Professional / technical writing and documentation suitable for submission as project deliverables.
